<resources>
    <string name="order">订单</string>


    <!--订单核算-->
    <string name="order_verify">信息核对</string>
    <string name="order_verify_address">请添加收货地址</string>
    <string name="order_verify_address_invoce">请添加收发票地址</string>
    <string name="order_verify_goods_type">收货方式</string>
    <string name="order_verify_company">结算单位</string>
    <string name="order_verify_bill">发票信息</string>
    <string name="order_verify_bill_input">请添加发票信息</string>
    <string name="order_verify_pay_type">支付方式</string>
    <string name="order_verify_freight">运费</string>
    <string name="order_verify_remark">订单备注</string>
    <string name="order_verify_remark_hint">您可在此输入45字以内的备注</string>
    <string name="order_verify_number">共计%s件</string>
    <string name="order_verify_subtotal">小计：</string>
    <string name="order_verify_sub_price">¥ %s</string>
    <string name="order_verify_sub_num">x%s</string>
    <string name="order_verify_year_total">年度预算总额</string>
    <string name="order_verify_year_extra">年度预算余额</string>
    <string name="order_verify_total">合计：</string>
    <string name="order_verify_commit">提交采购单</string>
    <string name="order_verify_np">%1$s &#160;&#160;&#160;&#160; %2$s</string>
    <string name="order_verify_pct">%1$s%2$s%3$s</string>


    <!--    采购单列表-->
    <string-array name="order_list_tab">
        <item>我的采购单</item>
        <item>全部采购单</item>

    </string-array>
    <string name="order_empty">空空如也</string>
    <!--    采购-->
    <string name="order_buy_code">采购单号：%s</string>
    <string name="order_buy_time">生成时间：%s</string>
    <string name="order_buy_supplier">供应商：%s</string>
    <string name="order_buy_company">采购人：%s</string>
    <string name="order_buy_delaytime">延迟收货：%s</string>


    <!--    发票信息-->
    <string name="order_invoice">发票信息</string>
    <string name="order_invoice_type">发票类型</string>
    <string name="order_invoice_type_special">增值税专用发票</string>
    <string name="order_invoice_type_common">企业增值税普通发票</string>
    <string name="order_invoice_content">发票内容</string>
    <string name="order_invoice_content_detail">明细</string>
    <string name="order_invoice_content_cls">大类</string>
    <string name="order_invoice_title">发票抬头</string>
    <string name="order_invoice_ok">确定</string>

    <string name="order_invoice_company">企业名称：%s</string>
    <string name="order_invoice_code">纳税人识别号：%s</string>
    <string name="order_invoice_address">注册地址：%s</string>
    <string name="order_invoice_phone">注册电话：%s</string>
    <string name="order_invoice_bank">开户行：%s</string>
    <string name="order_invoice_bankcode">银行账号：%s</string>


    <!--采购单详情-->
    <string name="order_detail_title">采购单详情</string>
    <string name="order_settle_account">结算单位</string>
    <string name="order_comment">采购单备注：</string>
    <string name="order_created">已生成订单</string>
    <string name="order_audit_process">审批流程</string>
    <string name="toSee">查看</string>
    <string name="orderNum">订单编号</string>
    <string name="createdTime">生成时间</string>
    <string name="word_order_comm_">采购单备注：</string>
    <string name="toCheck">查看</string>
    <string name="orderNumIs">订单号：</string>
    <string name="orderTimeIs">生成时间：</string>
    <string name="searchOrderNo">搜索单号</string>
    <string name="orderNo">采购单号</string>
    <string name="skuNum">单品编码：</string>
    <string name="deliveredFiles">妥投证明</string>
    <string name="download">下载</string>
    <string name="downloading">下载中</string>
    <string name="view">查看</string>


</resources>