<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_border">

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/order_verify_address"
                    android:textColor="@color/font_black_light"
                    android:textSize="@dimen/font_size_13" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:drawableRight="@drawable/svg_arrow_white"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/order_verify_address"
                    android:textColor="@color/font_black"
                    android:textSize="@dimen/font_size_18" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/order_verify_address"
                    android:textColor="@color/font_black_light"
                    android:textSize="@dimen/font_size_13" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ll_address"
                android:layout_alignBottom="@+id/ll_address"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/svg_arrow_white"
                    android:text="@string/order_verify_address"
                    android:textColor="@color/font_black"
                    android:drawablePadding="@dimen/dp_3"
                    android:textSize="@dimen/font_size_18" />

            </LinearLayout>


        </RelativeLayout>

        <View style="@style/line_bold_gray_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginTop="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border"
                android:text="@string/order_verify_goods_type"
                android:textColor="@color/font_black_light"
                android:textSize="@dimen/font_size_13" />


            <com.rails.purchaseplatform.common.widget.LrLableLayout
                android:id="@+id/rl_goods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                app:is_hide="true"
                app:key="@string/order_verify_goods_type"
                app:key_color="@color/font_black"
                app:key_size="@dimen/font_size_14"
                app:value_color="@color/font_black"
                app:value_right_icon="@drawable/svg_arrow_white"
                app:value_size="@dimen/font_size_13" />

        </LinearLayout>

        <View style="@style/line_bold_gray_10" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginTop="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border"
                android:text="@string/order_verify_company"
                android:textColor="@color/font_black_light"
                android:textSize="@dimen/font_size_13" />


            <com.rails.purchaseplatform.common.widget.LrLableLayout
                android:id="@+id/rl_compay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                app:is_hide="true"
                app:key_color="@color/font_black"
                app:key_size="@dimen/font_size_14"
                app:value_color="@color/font_black"
                app:value_right_icon="@drawable/svg_arrow_white"
                app:value_size="@dimen/font_size_13" />

            <View
                style="@style/line_thin_gray"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginTop="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border"
                android:text="@string/order_verify_bill"
                android:textColor="@color/font_black_light"
                android:textSize="@dimen/font_size_13" />


            <com.rails.purchaseplatform.common.widget.LrLableLayout
                android:id="@+id/rl_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                app:is_hide="true"
                app:key="@string/order_verify_bill"
                app:key_color="@color/font_black"
                app:key_size="@dimen/font_size_14"
                app:value_color="@color/font_black"
                app:value_right_icon="@drawable/svg_arrow_white"
                app:value_size="@dimen/font_size_13" />


            <View
                style="@style/line_thin_gray"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginTop="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border"
                android:text="@string/order_verify_pay_type"
                android:textColor="@color/font_black_light"
                android:textSize="@dimen/font_size_13" />


            <com.rails.purchaseplatform.common.widget.LrLableLayout
                android:id="@+id/rl_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                app:is_hide="true"
                app:key="@string/order_verify_goods_type"
                app:key_color="@color/font_black"
                app:key_size="@dimen/font_size_14"
                app:value_color="@color/font_black"
                app:value_right_icon="@drawable/svg_arrow_white"
                app:value_size="@dimen/font_size_13" />

            <View style="@style/line_bold_gray_10" />

        </LinearLayout>


        <com.rails.purchaseplatform.common.widget.BaseRecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>


        <View style="@style/line_bold_gray_10" />

        <com.rails.purchaseplatform.common.widget.LrLableLayout
            android:id="@+id/rl_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:is_hide="true"
            app:key="@string/order_verify_year_total"
            app:key_color="@color/font_black_light"
            app:key_size="@dimen/font_size_14"
            app:value_color="@color/font_black"
            app:value_size="@dimen/font_size_14" />

        <View
            style="@style/line_thin_gray"
            android:layout_marginLeft="@dimen/common_border"
            android:layout_marginRight="@dimen/common_border" />


        <com.rails.purchaseplatform.common.widget.LrLableLayout
            android:id="@+id/rl_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:is_hide="true"
            app:key="@string/order_verify_year_extra"
            app:key_color="@color/font_black_light"
            app:key_size="@dimen/font_size_14"
            app:value_color="@color/font_red"
            app:value_size="@dimen/font_size_14" />


        <View style="@style/line_bold_gray_10" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_total_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/font_size_13" />


            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_total_num"
                android:layout_alignLeft="@+id/tv_total_num"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_10"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_size_13" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/common_border"
                android:background="@drawable/bg_corner_blue_20"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_8"
                android:paddingRight="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/order_verify_commit"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_15" />

        </RelativeLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>

