<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="cart"
            type="com.rails.lib_data.bean.CartShopBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/shopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_border"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/common_border"
            android:layout_marginBottom="@dimen/dp_15"
            android:drawableLeft="@drawable/ic_order_shop"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/order_verify_year_extra"
            android:textColor="@color/font_black_light"
            android:textSize="@dimen/font_size_13" />

        <com.rails.purchaseplatform.common.widget.BaseRecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_marginLeft="@dimen/common_border"
            android:layout_marginRight="@dimen/common_border"
            app:canH="false"
            app:canV="false" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_border"
            android:layout_marginRight="@dimen/common_border"
            android:layout_marginBottom="@dimen/dp_8">

            <TextView
                android:id="@+id/tv_freight_flag"
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:text="@string/order_verify_freight"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_size_13" />


            <TextView
                android:id="@+id/tv_freight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_toLeftOf="@+id/tv_freight_price"
                android:layout_toRightOf="@+id/tv_freight_flag"
                android:text="已满足包邮条件，免运费"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/font_size_13" />


            <TextView
                android:id="@+id/tv_freight_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@{@string/order_verify_sub_price(cart.freightPrice)}"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_size_13" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_border"
            android:paddingRight="@dimen/common_border">

            <TextView
                android:id="@+id/tv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="left"
                android:minWidth="@dimen/dp_80"
                android:text="@string/order_verify_remark"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_size_13" />

            <com.rails.purchaseplatform.common.widget.ContainsEmojiEditText
                android:id="@+id/et_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/common_border"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_toRightOf="@+id/tv_key"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/order_verify_remark_hint"
                android:lines="3"
                android:maxLength="45"
                android:minWidth="@dimen/dp_40"
                android:textColor="@color/font_black"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_size_13" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_border"
            android:layout_marginRight="@dimen/common_border"
            android:layout_marginBottom="@dimen/dp_15">

            <TextView
                android:id="@+id/tv_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_size_13"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_subnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_toLeftOf="@+id/tv_subtotal"
                android:text="@{@string/order_verify_number(cart.selectedSkuNum)}"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/font_size_13" />

        </RelativeLayout>

    </LinearLayout>
</layout>